--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="addPlayer">
         <form onsubmit="event.preventDefault(); addplayer(event)">
             <input type="text" id="name">
-            <input type="submit">
+            <input type="submit" value="Add Player">
         </form>
     </div>
 
