--- a/index.html
+++ b/index.html
@@ -98,6 +98,28 @@
         <h3>ver</h3>
         <div id="verhistory" class="history"></div>
       </div>
+      <div id="gug">
+        <button>0</button>
+        <br />
+        <button>-10</button>
+        <button>+10</button>
+        <br />
+        <button>-20</button>
+        <button>+20</button>
+        <br />
+        <button>-30</button>
+        <button>+30</button>
+        <br />
+        <button>-40</button>
+        <button>+40</button>
+        <br />
+        <button>-50</button>
+        <button>+50</button>
+        <br />
+        <h3 id="gugsum">0</h3>
+        <h3>gug</h3>
+        <div id="gughistory" class="history"></div>
+      </div>
       <div id="bzz">
         <button>0</button>
         <br />
