--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button>+50</button>
         <br />
         <h3 id="zursum">0</h3>
-        <h3>zur</h3>
+        <h3>ზურა</h3>
         <div id="zurhistory" class="history"></div>
       </div>
       <div id="ach">
@@ -51,7 +51,7 @@
         <button>+50</button>
         <br />
         <h3 id="achsum">0</h3>
-        <h3>ach</h3>
+        <h3>აჩო</h3>
         <div id="achhistory" class="history"></div>
       </div>
       <div id="nat">
@@ -73,7 +73,7 @@
         <button>+50</button>
         <br />
         <h3 id="natsum">0</h3>
-        <h3>nat</h3>
+        <h3>ნათ</h3>
         <div id="nathistory" class="history"></div>
       </div>
       <div id="ver">
@@ -95,7 +95,7 @@
         <button>+50</button>
         <br />
         <h3 id="versum">0</h3>
-        <h3>ver</h3>
+        <h3>ნიკა</h3>
         <div id="verhistory" class="history"></div>
       </div>
       <div id="gug">
@@ -117,7 +117,7 @@
         <button>+50</button>
         <br />
         <h3 id="gugsum">0</h3>
-        <h3>gug</h3>
+        <h3>გიგა</h3>
         <div id="gughistory" class="history"></div>
       </div>
       <div id="bzz">
@@ -139,7 +139,7 @@
         <button>+50</button>
         <br />
         <h3 id="bzzsum">0</h3>
-        <h3>bzz</h3>
+        <h3>ბზზ</h3>
         <div id="bzzhistory" class="history"></div>
       </div>
     </div>
