--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <button>+50</button>
         <br />
         <h3 id="gugsum">0</h3>
-        <h3>გიგა</h3>
+        <h3>რეზო</h3>
         <div id="gughistory" class="history"></div>
       </div>
       <div id="bzz">
