--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h3>***</h3>
         <div id="verhistory" class="history"></div>
       </div>
-      <div id="gug">
+      <div id="rez">
         <button>0</button>
         <br />
         <button>-10</button>
@@ -118,9 +118,9 @@
         <button>-50</button>
         <button>+50</button>
         <br />
-        <h3 id="gugsum">0</h3>
-        <h3>რეზო</h3>
-        <div id="gughistory" class="history"></div>
+        <h3 id="rezsum">0</h3>
+        <h3>რეზი</h3>
+        <div id="rezhistory" class="history"></div>
       </div>
       <div id="bzz">
         <button>0</button>
