--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <button>+50</button>
         <br />
         <h3 id="versum">0</h3>
-        <h3>***</h3>
+        <h3>სოფ</h3>
         <div id="verhistory" class="history"></div>
       </div>
       <div id="rez">
@@ -143,6 +143,29 @@
         <h3 id="bzzsum">0</h3>
         <h3>ბზზ</h3>
         <div id="bzzhistory" class="history"></div>
+      </div>
+    </div>
+     <div id="nin">
+        <button>0</button>
+        <br />
+        <button>-10</button>
+        <button>+10</button>
+        <br />
+        <button>-20</button>
+        <button>+20</button>
+        <br />
+        <button>-30</button>
+        <button>+30</button>
+        <br />
+        <button>-40</button>
+        <button>+40</button>
+        <br />
+        <button>-50</button>
+        <button>+50</button>
+        <br />
+        <h3 id="ninsum">0</h3>
+        <h3>ნინ</h3>
+        <div id="nihistory" class="history"></div>
       </div>
     </div>
     <div id="addPlayer">
