--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <br />
         <h3 id="ninsum">0</h3>
         <h3>ნინ</h3>
-        <div id="nihistory" class="history"></div>
+        <div id="ninhistory" class="history"></div>
       </div>
     </div>
     <div id="addPlayer">
