--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <button>+50</button>
         <br />
         <h3 id="versum">0</h3>
-        <h3>სოფ</h3>
+        <h3>სოფი</h3>
         <div id="verhistory" class="history"></div>
       </div>
       <div id="rez">
@@ -163,7 +163,7 @@
         <button>+50</button>
         <br />
         <h3 id="ninsum">0</h3>
-        <h3>ნინ</h3>
+        <h3>ნინო</h3>
         <div id="ninhistory" class="history"></div>
       </div>
     </div>
