--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="./manifest.json" />
 
     <title>Jeopardy</title>
   </head>
@@ -13,6 +13,7 @@
   <body>
     <div class="players">
       <div id="zur">
+        <button class="remove">X</button>
         <button>0</button>
         <br />
         <button>-10</button>
@@ -35,6 +36,7 @@
         <div id="zurhistory" class="history"></div>
       </div>
       <div id="ach">
+        <button class="remove">X</button>
         <button>0</button>
         <br />
         <button>-10</button>
@@ -57,6 +59,7 @@
         <div id="achhistory" class="history"></div>
       </div>
       <div id="nat">
+        <button class="remove">X</button>
         <button>0</button>
         <br />
         <button>-10</button>
@@ -79,6 +82,7 @@
         <div id="nathistory" class="history"></div>
       </div>
       <div id="ver">
+        <button class="remove">X</button>
         <button>0</button>
         <br />
         <button>-10</button>
@@ -101,6 +105,7 @@
         <div id="verhistory" class="history"></div>
       </div>
       <div id="rez">
+        <button class="remove">X</button>
         <button>0</button>
         <br />
         <button>-10</button>
@@ -123,6 +128,7 @@
         <div id="rezhistory" class="history"></div>
       </div>
       <div id="bzz">
+        <button class="remove">X</button>
         <button>0</button>
         <br />
         <button>-10</button>
@@ -144,7 +150,8 @@
         <h3>ბზზ</h3>
         <div id="bzzhistory" class="history"></div>
       </div>
-     <div id="nin">
+      <div id="nin">
+        <button class="remove">X</button>
         <button>0</button>
         <br />
         <button>-10</button>
